docusaurus/angular_versioned_docs/version-4/services/NotificationService.mdx
# NotificationService

The `NotificationService` can be used to add or remove notifications. By default the [`NotificationList`](../components/NotificationListComponent.mdx) component displays the currently active notifications.

## Properties

### notifications$

• **notifications$**: `Observable`<`NotificationPayload`<{}\>[]\>

Emits the currently active [notifications](https://github.com/GetStream/stream-chat-angular/blob/master/projects/stream-chat-angular/src/lib/notification.service.ts).

#### Defined in

[lib/notification.service.ts:15](https://github.com/GetStream/stream-chat-angular/blob/4411374/projects/stream-chat-angular/src/lib/notification.service.ts#L15)

## Methods

### addPermanentNotification

▸ **addPermanentNotification**<`T`\>(`content`, `type?`, `translateParams?`, `templateContext?`): () => `void`

Displays a notification, that will be visible until it's removed.

#### Type parameters

| Name | Type                      |
| :--- | :------------------------ |
| `T`  | { [key: string]: `any`; } |

#### Parameters

| Name               | Type                            | Default value | Description                                                            |
| :----------------- | :------------------------------ | :------------ | :--------------------------------------------------------------------- |
| `content`          | `string` \| `TemplateRef`<`T`\> | `undefined`   | The text of the notification or the HTML template for the notification |
| `type`             | `NotificationType`              | `'error'`     | The type of the notification                                           |
| `translateParams?` | `Object`                        | `undefined`   | Translation parameters for the `content` (for text notifications)      |
| `templateContext?` | `T`                             | `undefined`   | The input of the notification template (for HTML notifications)        |

#### Returns

`fn`

A method to clear the notification.

▸ (): `void`

##### Returns

`void`

#### Defined in

[lib/notification.service.ts:68](https://github.com/GetStream/stream-chat-angular/blob/4411374/projects/stream-chat-angular/src/lib/notification.service.ts#L68)

---

### addTemporaryNotification

▸ **addTemporaryNotification**<`T`\>(`content`, `type?`, `timeout?`, `translateParams?`, `templateContext?`): () => `void`

Displays a notification for the given amount of time.

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Parameters

| Name               | Type                            | Default value | Description                                                            |
| :----------------- | :------------------------------ | :------------ | :--------------------------------------------------------------------- |
| `content`          | `string` \| `TemplateRef`<`T`\> | `undefined`   | The text of the notification or the HTML template for the notification |
| `type`             | `NotificationType`              | `'error'`     | The type of the notification                                           |
| `timeout`          | `number`                        | `5000`        | The number of milliseconds while the notification should be visible    |
| `translateParams?` | `Object`                        | `undefined`   | Translation parameters for the `content` (for text notifications)      |
| `templateContext?` | `T`                             | `undefined`   | The input of the notification template (for HTML notifications)        |

#### Returns

`fn`

A method to clear the notification (before the timeout).

▸ (): `void`

##### Returns

`void`

#### Defined in

[lib/notification.service.ts:31](https://github.com/GetStream/stream-chat-angular/blob/4411374/projects/stream-chat-angular/src/lib/notification.service.ts#L31)
